# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.24 2004/03/19 16:06:37 zhen Exp $

  19 Mar 2004; John Davis <zhen@gentoo.org> targets/grp/grp.sh,
  targets/stage1/stage1.sh, targets/stage3/stage3.sh:
  removing the hardened-gcc deps since the package itself is deprecated'

  05 Mar 2004; John Davis <zhen@gentoo.org> catalyst:
  changing location of /etc/catalyst.conf to /etc/catalyst/catalyst.conf

  04 Mar 2004; John Davis <zhen@gentoo.org> alpha-isogen.sh,
  examples/livecd/alpha/alpha-livecd-stage1-20040225.spec,
  examples/livecd/alpha/alpha-livecd-stage2-20040225.spec,
  examples/livecd/alpha/config-2.4.21-r4-alpha,
  examples/livecd/alpha/config-2.4.21-r4-jensen,
  examples/livecd/alpha/config-2.4.21-r4-legacy,
  examples/livecd/cdtar/aboot-0.9-r1-cdtar.tar.bz2,
  examples/livecd/runscript/alpha-archscript.sh, files/catalyst.conf:
  fixes for bugs 43676, 43701. Alpha support added as well.

  25 Feb 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>: 
  added powerpc livecd support, preparing for 2004.0 release. Preliminary 
  kde/gnome cd specs added.

  18 Feb 2004; John Davis <zhen@gentoo.org> files/catalyst.conf:
  fix in catalyst.conf for bug #42044

  13 Feb 2004; John Davis <zhen@gentoo.org> sparc64-isogen.sh, arch/sparc.py,
  arch/sparc64.py, examples/livecd/runscript/sparc64-archscript.sh,
  examples/livecd/sparc64/config-2.4.24-sparc64:
  sparc fixups contributed by Gustavo Zacarias <gustavoz@gentoo.org>

  12 Feb 2004; Daniel Robbins <drobbins@gentoo.org>: fixed bugs in previous
  feature additions (see 11 Feb 2004) and added support for a $clst_conf 
  environment variable. You can use the $clst_conf variable to point to
  a file to use in place of /etc/catalyst.conf. By setting this variable
  in your shell, catalyst can easily be used by multiple people on the
  same machine. Also, ccache support now works for genkernel.