@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.24 2004/03/19 16:06:37 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.25 2004/03/22 15:25:52 zhen Exp $
+
+  22 Mar 2004; John Davis <zhen@gentoo.org> modules/targets.py,
+  targets/embedded/embedded.sh:
+  preliminary embedded support added thanks to david@futuretel.com (mut3x)
 
   19 Mar 2004; John Davis <zhen@gentoo.org> targets/grp/grp.sh,
   targets/stage1/stage1.sh, targets/stage3/stage3.sh:
